--- a/app/src/main/res/layout/activity_list_past_reviews.xml
+++ b/app/src/main/res/layout/activity_list_past_reviews.xml
@@ -31,13 +31,13 @@
         android:ems="10"
         android:gravity="start|top"
         android:inputType="textMultiLine"
-        app:layout_constraintBottom_toTopOf="@+id/buttonSaveFile"
+        app:layout_constraintBottom_toTopOf="@+id/buttonSaveReview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textViewFileName" />
 
     <Button
-        android:id="@+id/buttonDeleteFile"
+        android:id="@+id/buttonDeleteReview"
         android:layout_width="150dp"
         android:layout_height="52dp"
         android:layout_marginBottom="12dp"
@@ -55,7 +55,7 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/buttonSaveFile"
+        android:id="@+id/buttonSaveReview"
         android:layout_width="150dp"
         android:layout_height="52dp"
         android:layout_marginBottom="12dp"
